; ModuleID = '/home/carl/AnghaBench/linux/arch/x86/kvm/extr_svm.c___sev_dbg_decrypt.c'
source_filename = "/home/carl/AnghaBench/linux/arch/x86/kvm/extr_svm.c___sev_dbg_decrypt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kvm = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.kvm*, i64, i64, i32, i32*)* @__sev_dbg_decrypt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @__sev_dbg_decrypt(%struct.kvm* %0, i64 %1, i64 %2, i32 %3, i32* %4) #0 {
  %6 = alloca %struct.kvm*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  store %struct.kvm* %0, %struct.kvm** %6, align 8
  store i64 %1, i64* %7, align 8
  store i64 %2, i64* %8, align 8
  store i32 %3, i32* %9, align 4
  store i32* %4, i32** %10, align 8
  %12 = load i64, i64* %7, align 8
  %13 = call i64 @round_down(i64 %12, i32 16)
  store i64 %13, i64* %7, align 8
  %14 = load i64, i64* %7, align 8
  %15 = and i64 %14, 15
  %16 = trunc i64 %15 to i32
  store i32 %16, i32* %11, align 4
  %17 = load i32, i32* %9, align 4
  %18 = load i32, i32* %11, align 4
  %19 = add nsw i32 %17, %18
  %20 = call i32 @round_up(i32 %19, i32 16)
  store i32 %20, i32* %9, align 4
  %21 = load %struct.kvm*, %struct.kvm** %6, align 8
  %22 = load i64, i64* %7, align 8
  %23 = load i64, i64* %8, align 8
  %24 = load i32, i32* %9, align 4
  %25 = load i32*, i32** %10, align 8
  %26 = call i32 @__sev_issue_dbg_cmd(%struct.kvm* %21, i64 %22, i64 %23, i32 %24, i32* %25, i32 0)
  ret i32 %26
}

declare dso_local i64 @round_down(i64, i32) #1

declare dso_local i32 @round_up(i32, i32) #1

declare dso_local i32 @__sev_issue_dbg_cmd(%struct.kvm*, i64, i64, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
